<resources>
    <string name="facebook_app_id">291540407956365</string>
    <string name="app_name">NewsProvider</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="feed">Feed</string>
    <string name="news">News</string>
    <string name="tech">Tech</string>
    <string name="sport">Sport</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="finance">Finance</string>
    <string name="football">Football</string>
    <string name="games">Games</string>
    <string name="music">Music</string>
    <string name="geography">Geography</string>
    <string name="science">Science</string>
    <string name="politics">Politics</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="interests">Interests</string>
    <string name="utils">Utils</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="please_register">Please, register</string>
    <string name="name">Name</string>
    <string name="notifications">Notifications</string>
    <string name="change_interests">change interests</string>
    <string name="exit">Exit</string>
    <string name="more">more</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register!</string>
    <string name="login_with_vk">Login with VK</string>
    <string name="favorite">Favorite</string>
    <integer name="com_vk_sdk_AppId">6004810</integer>
</resources>
